# irg_open

./: README.md
irg_gazebo_plugins/: CMakeLists.txt  package.xml
irg_gazebo_plugins/env-hooks/: 65.irg_gazebo_plugins.dsv.in  65.irg_gazebo_plugins.sh.in
irg_gazebo_plugins/materials/scripts/: IRGCameraExposureAndGamma.frag  IRGCameraNoise.frag  IRGCameraNoiseAndGain.frag  IRGCameraNoisePlugin.frag  IRGCameraNoisePlugin.vert  IRGCameraSim.frag  irg_gazebo_plugins.compositor  irg_gazebo_plugins.material
irg_gazebo_plugins/msg/: ShaderParamUpdate.msg
irg_gazebo_plugins/src/: CMakeLists.txt
irg_gazebo_plugins/src/IRGCameraNoisePlugin/: CMakeLists.txt  CameraNoisePlugin.cpp  CameraNoisePlugin.h  NoiseCompositorListener.cpp  NoiseCompositorListener.h  README.md
irg_gazebo_plugins/src/IRGCameraSimPlugins/: CMakeLists.txt  CameraCompositor.cpp  CameraCompositor.h  CameraCompositorListener.cpp  CameraCompositorListener.h  CameraSimBase.cpp  CameraSimBase.h  CameraSimSensorPlugin.cpp  CameraSimSensorPlugin.h  CameraSimVisualPlugin.cpp  CameraSimVisualPlugin.h  README.md
irg_gazebo_plugins/src/IRGCelestialBodyPlugin/: CMakeLists.txt  CelestialBodyPlugin.cpp  CelestialBodyPlugin.h  README.md
irg_gazebo_plugins/src/IRGGlobalShaderParamPlugin/: CMakeLists.txt  GlobalShaderParamPlugin.cpp  GlobalShaderParamPlugin.h  README.md
irg_gazebo_plugins/src/IRGIrradianceMapPlugin/: CMakeLists.txt  CubemapFilter.cpp  CubemapFilter.h  IrradianceMapPlugin.cpp  IrradianceMapPlugin.h  README.md
irg_gazebo_plugins/src/IRGLightFrustaPlugin/: CMakeLists.txt  LightFrustaPlugin.cpp  LightFrustaPlugin.h  README.md
irg_gazebo_plugins/src/IRGLinkTracksPlugin/: CMakeLists.txt  LinkTracksPlugin.cpp  LinkTracksPlugin.h  README.md
irg_gazebo_plugins/src/IRGNearFarClipPlugin/: CMakeLists.txt  NearFarClipPlugin.cpp  NearFarClipPlugin.h  README.md
irg_gazebo_plugins/src/IRGReloadShadersPlugin/: CMakeLists.txt  README.md  ReloadShadersPlugin.cpp  ReloadShadersPlugin.h
irg_gazebo_plugins/src/IRGShadowParametersPlugins/: CMakeLists.txt  README.md  ShadowParametersPluginBase.cpp  ShadowParametersPluginBase.h  ShadowParametersSensorPlugin.cpp  ShadowParametersSensorPlugin.h  ShadowParametersVisualPlugin.cpp  ShadowParametersVisualPlugin.h
irg_gazebo_plugins/src/IRGVisibilityPlugin/: CMakeLists.txt  README.md  VisibilityPlugin.cpp  VisibilityPlugin.h
irg_planetary_ephemeris/: CMakeLists.txt  README.md  package.xml
irg_planetary_ephemeris/config/: example_parameters.yaml
irg_planetary_ephemeris/env-hooks/: 70.irg_planetary_ephemeris.dsv.in  70.irg_planetary_ephemeris.sh
irg_planetary_ephemeris/models/irg_earth/: model.config  model.sdf
irg_planetary_ephemeris/models/irg_earth/materials/scripts/: irg_planet.frag  irg_planetary_ephemeris.material
irg_planetary_ephemeris/models/irg_jupiter/: model.sdf
irg_planetary_ephemeris/models/irg_saturn/: model.sdf
irg_planetary_ephemeris/models/irg_sun/: model.config  model.sdf
irg_planetary_ephemeris/models/irg_sun/materials/scripts/: irg_sun.material
irg_planetary_ephemeris/scripts/: compute_spherical_albedo.py
irg_planetary_ephemeris/src/: CMakeLists.txt  ephemeris.cpp  ephemeris.h  ephemeris_publisher_node.cpp  ephemeris_publisher_node.h  ephemeris_service_node.cpp  ephemeris_service_node.h  europa_run_parameters.yaml  handle-options.cpp  handle-options.h
irg_spice/: .gitignore  CMakeLists.txt  README.md  package.xml
irg_tools/: CMakeLists.txt  README.md  package.xml  plugin.xml
irg_tools/scripts/: geotiff_to_normalmap.py  rosbag_topic_size.py
irg_tools/src/: CMakeLists.txt
irg_tools/src/irg_rqt_tools/: CMakeLists.txt  CameraConfig.cpp  CameraConfig.h  CameraConfig.ui  CustomLineEdit.cpp  CustomLineEdit.h  ImageTrigger.cpp  ImageTrigger.h  ImageTrigger.ui  ImageTriggerWidget.cpp  ImageTriggerWidget.h  ImageTriggerWidget.ui  PanTilt.cpp  PanTilt.h  PanTilt.ui  Utils.cpp  Utils.h
irg_tools/src/link/: CMakeLists.txt  main.cpp
