<?xml version="1.0"?>
<package format="2">
  <name>irg_planetary_ephemeris</name>
  <version>0.0.0</version>
  <description>A package for calculating transforms to planetary bodies</description>

  <maintainer email="laurence.j.edwards@nasa.gov">Laurence Edwards</maintainer>

  <license>TODO</license>

  <author email="laurence.j.edwards@nasa.gov">Laurence Edwards</author>
  <author email="scott.t.mcmichael@nasa.gov">Scott McMichael</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>irg_spice</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>irg_spice</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
