<?xml version="1.0"?>
<package format="2">
  <name>irg_spice</name>
  <version>1.0.0</version>
  <description>Package to download the SPICE package and make it available for other ROS packages</description>

  <maintainer email="scott.t.mcmichael@nasa.gov">Scott McMichael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
