<?xml version="1.0"?>
<package format="2">
  <name>irg_tools</name>
  <version>0.0.1</version>
  <description>The irg_tools package</description>
  <maintainer email="Mark.B.Allan@nasa.gov">mallan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
