add_subdirectory(IRGCameraNoisePlugin)
add_subdirectory(IRGCameraSimPlugins)
add_subdirectory(IRGGlobalShaderParamPlugin)
add_subdirectory(IRGIrradianceMapPlugin)
add_subdirectory(IRGLightFrustaPlugin)
add_subdirectory(IRGNearFarClipPlugin)
add_subdirectory(IRGReloadShadersPlugin)
add_subdirectory(IRGShadowParametersPlugins)

